--- a/product.html
+++ b/product.html
@@ -39,7 +39,12 @@
 
     <!-- Høyre: Produktinfo -->
     <div class="product-info">
-      <button id="back-btn" class="back-btn">← Tilbake</button>
+      <a href="#" id="back-btn" class="back-link">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/>
+  </svg>
+  Tilbake
+</a>
       <h1 id="product-title"></h1>
       <p id="product-brand" class="brand"></p>
       <p id="product-price" class="price"></p>
