--- a/product.html
+++ b/product.html
@@ -9,23 +9,7 @@
 <body>
 
   <!-- HEADER -->
-  <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
-
-      <div class="search-box">
-        <input type="text" placeholder="Søk produkter eller merker..." />
-        <button>🔍</button>
-      </div>
-
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html">Favoritter</a>
-      </nav>
-    </div>
-  </header>
+  <div id="header-placeholder"></div>
 
   <!-- PRODUKTDETALJER -->
  <section class="product-detail">
@@ -87,6 +71,18 @@
       updateButtonState();
     });
   </script>
+
+  <script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      const script = document.createElement("script");
+      script.src = "script.js";
+      document.body.appendChild(script);
+    });
+</script>
+ 
 </body>
 </html>
 
