--- a/news.html
+++ b/news.html
@@ -11,17 +11,8 @@
   <!-- ================================
        HEADER
        ================================ -->
-  <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html" class="active">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html">Favoritter (<span id="favorite-count">0</span>)</a>
-      </nav>
-    </div>
-  </header>
+ <div id="header-placeholder"></div>
+
 
 
   <!-- ================================
@@ -75,6 +66,18 @@
   <script src="deals.js"></script>
   <script src="picks.js"></script>
   <script src="news.js"></script>
+
+
+  <script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      const script = document.createElement("script");
+      script.src = "script.js";
+      document.body.appendChild(script);
+    });
+</script>
 
 </body>
 </html>
