--- a/favoritter.html
+++ b/favoritter.html
@@ -8,23 +8,8 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
+  <div id="header-placeholder"></div>
 
-      <div class="search-box">
-        <input type="text" placeholder="Søk produkter eller merker..." />
-        <button>🔍</button>
-      </div>
-
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html" class="active">Favoritter</a>
-      </nav>
-    </div>
-  </header>
 
   <!-- FAVORITTER -->
   <section class="favorites-section">
@@ -34,6 +19,19 @@
 
   <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
+
+
+  <script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      const script = document.createElement("script");
+      script.src = "script.js";
+      document.body.appendChild(script);
+    });
+</script>
+
 </body>
 </html>
 
