--- a/brands.html
+++ b/brands.html
@@ -3,52 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrandRadar – Brands</title>
+  <title>Brands | BrandRadar</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- HEADER -->
- <div id="header-placeholder"></div>
 
+  <div id="header-placeholder"></div>
 
-  <!-- BRAND SEARCH -->
   <section class="brand-search">
     <input type="text" id="brandSearch" placeholder="Søk etter brand..." />
   </section>
 
-  <!-- HIGHLIGHTED BRANDS -->
   <section class="highlighted-brands">
     <h2>Fremhevede brands</h2>
     <div class="brand-grid" id="highlight-grid"></div>
   </section>
 
-  <!-- ALL BRANDS -->
   <section class="all-brands">
     <h2>Alle brands</h2>
     <div class="brand-grid" id="brand-grid"></div>
   </section>
 
   <script src="script-brands.js"></script>
-  <script src="script-favorites.js"></script>
 
-   <!-- Dynamisk lasting av header + mega-meny -->
+  <!-- Dynamisk header -->
   <script>
-    fetch("header.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("header-placeholder").innerHTML = html;
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
 
-        // Kjør script.js etter at headeren faktisk er lagt til i DOM
-        setTimeout(() => {
-          const script = document.createElement("script");
-          script.src = "script.js"; // mega-meny-scriptet
-          script.onload = () => console.log("✅ Mega-meny aktivert på category.html");
-          document.body.appendChild(script);
-        }, 100);
-      })
-      .catch(err => console.error("❌ Kunne ikke laste header:", err));
+      const loadSequential = async () => {
+        const loadScript = (src) =>
+          new Promise((resolve) => {
+            const s = document.createElement("script");
+            s.src = src;
+            s.onload = resolve;
+            document.body.appendChild(s);
+          });
+
+        await loadScript("script.js");
+        await loadScript("script-favorites.js");
+        if (typeof updateFavoriteCount === "function") updateFavoriteCount();
+        console.log("✅ Header, meny og teller aktivert");
+      };
+
+      loadSequential();
+    })
+    .catch((err) => console.error("❌ Kunne ikke laste header:", err));
   </script>
 </body>
 </html>
+
 
   
