--- a/favoritter.html
+++ b/favoritter.html
@@ -7,40 +7,43 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- HEADER -->
+
   <div id="header-placeholder"></div>
 
-
-  <!-- FAVORITTER -->
   <section class="favorites-section">
     <h2>Dine favoritter ❤️</h2>
     <div id="favorites-grid" class="favorites-grid"></div>
   </section>
 
-  
-   <!-- Dynamisk lasting av header + mega-meny -->
-  <script>
-    fetch("header.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("header-placeholder").innerHTML = html;
-
-        // Kjør script.js etter at headeren faktisk er lagt til i DOM
-        setTimeout(() => {
-          const script = document.createElement("script");
-          script.src = "script.js"; // mega-meny-scriptet
-          script.onload = () => console.log("✅ Mega-meny aktivert på category.html");
-          document.body.appendChild(script);
-        }, 100);
-      })
-      .catch(err => console.error("❌ Kunne ikke laste header:", err));
-  </script>
-</script>
-  <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
 
+  <!-- Dynamisk header -->
+  <script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+
+      const loadSequential = async () => {
+        const loadScript = (src) =>
+          new Promise((resolve) => {
+            const s = document.createElement("script");
+            s.src = src;
+            s.onload = resolve;
+            document.body.appendChild(s);
+          });
+
+        await loadScript("script.js");
+        await loadScript("script-favorites.js");
+        if (typeof updateFavoriteCount === "function") updateFavoriteCount();
+        console.log("✅ Header, meny og teller aktivert");
+      };
+
+      loadSequential();
+    })
+    .catch((err) => console.error("❌ Kunne ikke laste header:", err));
+  </script>
 </body>
 </html>
-
 
 
